--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-phone-input-2": "^2.15.1",
+    "react-phone-number-input": "^3.3.7",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
