--- a/package.json
+++ b/package.json
@@ -40,5 +40,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "https://waku-waku-sushi-api.onrender.com"
 }
