--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "demo",
   "version": "0.1.0",
+  "main": "server.js",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "json-server": "^0.17.4",
+    "cors": "^2.8.5",
+    "json-server": "^0.16.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
@@ -16,12 +18,17 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
+  "devDependencies": {
+    "nodemon": "1.18.4"
+  },
   "scripts": {
     "start": "PORT=3000 react-scripts start",
     "server": "json-server --watch db.json -p 3001",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "nodemon server.js",
+    "seed": "cp db/seeds.json db/db.json"
   },
   "eslintConfig": {
     "extends": [
