--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   },
   "scripts": {
     "start": "PORT=3000 react-scripts start",
-    "server": "json-server --watch db.json -p 3001",
+    "dev-server": "json-server --watch db.json -p 3001",
+    "server": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
