--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "demo",
   "version": "0.1.0",
-  "main": "server.js",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -23,13 +22,10 @@
   },
   "scripts": {
     "start": "PORT=3000 react-scripts start",
-    "dev-server": "json-server --watch db.json -p 3001",
-    "server": "node server.js",
+    "server": "json-server --watch db.json -p 3001",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "dev": "nodemon server.js",
-    "seed": "cp db/seeds.json db/db.json"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
